2005-05-20  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: fix handling of file names starting with a tilde.

2005-05-19  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: fix compilation on AIX 5.1
	* commands.cc: fixed minor problem with `lftp -u user --help'.

2005-05-18  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: use dlsym to find library versions, this fixes
	  compilation with modules.
	* lftp_ssl.cc, lftp_ssl.h: (LoadCA, LoadCRL) new methods.
	* lftp.cc: don't call lftp_ssl as it can be modular.

2005-05-17  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc, buffer_ssl.h, ftpclass.cc, ftpclass.h, module.cc,
	  resource.cc: fixed compilation without ssl.

2005-05-13  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: fix coredump when symlink target is unknown.
	* lftp_ssl.cc: set cert error if cert type is not supported.

2005-05-12  Alexander V. Lukyanov <lav@yars.free.net>

	* FtpListInfo.cc: add AS/400 parser, handle trailing slash in NLST.

2005-05-11  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc: allow V1 root crt.

2005-05-06  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc, lftp_ssl.h: fixes compilation with openssl; add instance
	  to openssl code; improve temp error handling for gnutls.
	* commands.cc: improve version info.

2005-05-05  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc, lftp_ssl.h: verify peer certificate chain with gnutls;
	  load CA and CRL globally; gnutls debugging support.
	* lftp.cc: deinit ssl.
	* resource.cc: ssl:*-path are only available with openssl.

2005-04-29  Alexander V. Lukyanov <lav@yars.free.net>

	* HttpDir.cc, HttpDirXML.cc: replace atoll with sscanf.
	* GetJob.cc: do expand_home_relative on output file name.
	* Filter.cc, PtyShell.cc: fix gcc4 warning.
	* Makefile.am: add gnutls support.
	* buffer_ssl.cc: use ssl->error member.
	* lftp_ssl.cc, lftp_ssl.h: implement basic gnutls support.
